--- a/aquabond_summary.html
+++ b/aquabond_summary.html
@@ -10,7 +10,9 @@
 <body>
     <nav class="site-nav">
         <div class="container nav-inner">
-            <a class="logo" href="home_page.html">AquaBond</a>
+            <a class="logo" href="home_page.html">
+                <img src="./logo.png" alt="AquaBond Home">
+            </a>
             <ul class="nav-links">
                 <li><a href="home_page.html">Home</a></li>
                 <li><a href="about_aquabond.html">About</a></li>
