--- a/impact.html
+++ b/impact.html
@@ -10,15 +10,15 @@
 <body>
     <nav class="site-nav">
         <div class="container nav-inner">
-            <a class="logo" href="home_page.html">
+            <a class="logo" href="index.html">
                 <img src="./logo.png" alt="AquaBond Home">
             </a>
             <ul class="nav-links">
-                <li><a href="home_page.html">Home</a></li>
-                <li><a href="about_aquabond.html" class="active">About</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about_aquabond.html">About</a></li>
                 <li><a href="mission_statement.html">Mission</a></li>
                 <li><a href="why_aquabond.html">Why AquaBond</a></li>
-                <li><a href="impact.html">Impact</a></li>
+                <li><a href="impact.html" class="active">Impact</a></li>
                 <li><a href="aquabond_summary.html">Summary</a></li>
             </ul>
         </div>
